# bot-notification

./: .gitignore  CLAUDE.md  Cargo.toml  report.md
.github/workflows/: ci.yml  release.yml
src/: chunk.rs  content.rs  feishu.rs  main.rs  webhook.rs
