[package]
name = "bot-notification"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[profile.release]
lto = true
strip = true
opt-level = "z"
